# InspireReverseEngineer-IRE-

./: .gitignore  Inspire Reverse Engineer (IRE).md  README.md  extraer_variables_layout.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: basic_usage.py
inspire/: __init__.py
inspire/analyzers/: __init__.py  dependency.py  layout.py  pipeline.py  rules.py  statistics.py  variables.py
inspire/cli/: __init__.py  main.py
inspire/extractors/: __init__.py  fcv.py  fields.py  registry.py  scripts.py
inspire/generators/: __init__.py  cleanxml_gen.py  excel_gen.py  flow_layout.py  graphml_gen.py  graphviz_gen.py  html_gen.py  json_gen.py  markdown_gen.py  mermaid_gen.py  pdf_gen.py  serialize.py
inspire/model/: __init__.py  elements.py  enums.py  workflow.py
inspire/parser/: __init__.py  loader.py  parser.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_dependency_flow.py  test_extractors.py  test_fcv.py  test_flow_layout.py  test_generators.py  test_graphviz.py  test_layout.py  test_parser.py
